Added update and delete functionalities

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
   </div>
 </div>
 
+<!--ADD FORM-->
 <div *ngIf="appState == 'add'" class="row">
   <div class="medium-12 columns">
     <h3>Add Business</h3>
@@ -120,6 +121,89 @@
   </div>
 </div>
 
+<!--EDIT FORM-->
+<div *ngIf="appState == 'edit'" class="row">
+  <div class="medium-12 columns">
+    <h3>Edit Business</h3>
+    <form (submit)="updateBusiness()">
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>Company
+            <input type="text" [(ngModel)]="activeCompany" name="activeCompany" placeholder="Company Name" #company>
+          </label>          
+        </div>
+        <div class="medium-6 columns">
+          <label>Category
+            <select [(ngModel)]="activeCategory" name="activeCategory" #category>
+             <option value="0">Select</option> 
+             <option *ngFor="let category of categories" value="{{category.name}}">{{category.name}}</option>
+            </select>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>Years In Business
+            <input type="text" [(ngModel)]="activeYearsInBusiness" name="activeYearsInBusiness" placeholder="Years In Business" #years_in_business>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>Description
+            <textarea [(ngModel)]="activeDescription" name="activeDescription" #description></textarea>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>Phone
+            <input type="text" [(ngModel)]="activePhone" name="activePhone" placeholder="Phone" #phone>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>Email
+            <input type="text" [(ngModel)]="activeEmail" name="activeEmail" placeholder="Email" #email>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>Street Address
+            <input type="text" [(ngModel)]="activeStreetAddress" name="activeStreetAddress" placeholder="Street Address" #street_address>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>City
+            <input type="text" [(ngModel)]="activeCity" name="activeCity" placeholder="City" #city>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>State
+            <input type="text" [(ngModel)]="activeState" name="activeState" placeholder="State" #state>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>Zipcode
+            <input type="text" [(ngModel)]="activeZipcode" name="activeZipcode" placeholder="Zipcode" #zipcode>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="medium-12">
+          <input type="submit" class="button" value="Submit">
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
+
 <div *ngIf="appState == 'extend'">
   <div class="row">
     <div class="large-12 columns">
@@ -172,8 +256,8 @@
             <td>{{business.phone}}</td>
             <td>
               <button (click)="changeState('extend', business.$key)" class="button">More</button>
-              <button class="button secondary">Edit</button>
-              <button class="button alert">Delete </button>
+              <button (click)="showEdit(business)" class="button secondary">Edit</button>
+              <button (click)="deleteBusiness(business.$key)" class="button alert">Delete </button>
             </td>
           </tr>
         </tbody>
